syntax = "proto3";

package v1;

option go_package = "/pb";

import "laptop_message.proto";

// CreateLaptopRequest create laptop request
message CreateLaptopRequest{
    Laptop laptop = 1; // laptop
}

// CreateLaptopResponse create laptop response
message CreateLaptopResponse{
    string id = 1; // laptop created id
}

service LaptopService{
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse){};
}